--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -98,6 +98,54 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+.site-avatar {
+  float: left;
+  width: 70px;
+  height: 70px;
+  margin-right: 15px;
+
+  //@include mobile {
+  //  float: none;
+  //  display: block;
+  //  margin: 0 auto;
+  //}
+
+  img {
+    border-radius: 5px;
+  }
+}
+
+//.site-info {
+//  float: left;
+//
+//  @include mobile {
+//    float: none;
+//    display: block;
+//    margin: 0 auto;
+//  }
+//}
+
+//.site-name {
+//  margin: 0;
+//  color: $darkGray;
+//  cursor: pointer;
+//  font-family: $helveticaNeue;
+//  font-weight: 300;
+//  font-size: 28px;
+//  letter-spacing: 1px;
+//}
+//
+//.site-description {
+//  margin: -5px 0 0 0;
+//  color: $gray;
+//  font-size: 16px;
+//
+//  @include mobile {
+//    margin: 3px 0;
+//  }
+//}
+
+
 
 /**
  * Links
