--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -99,10 +99,10 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .site-avatar {
-  float: left;
+  float: center;
   width: 70px;
   height: 70px;
-  margin-right: 15px;
+  //margin-right: 15px;
 
   //@include mobile {
   //  float: none;
@@ -115,15 +115,15 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-//.site-info {
-//  float: left;
-//
+.site-info {
+  float: center;
+
 //  @include mobile {
 //    float: none;
 //    display: block;
 //    margin: 0 auto;
 //  }
-//}
+}
 
 //.site-name {
 //  margin: 0;
