center avatar image on page

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -103,12 +103,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 70px;
   margin-left: auto;
   margin-right: auto;
-
-  //@include mobile {
-  //  float: none;
-  //  display: block;
-  //  margin: 0 auto;
-  //}
+  display: block;
 
   img {
     border-radius: 5px;
