--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" <![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9" <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
-  {%- include head.html -%}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {%- include header.html -%}
+   {% include header.html %}
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
+   <div class="content">
+      <div class="container">
+         {{ content }}
       </div>
-    </main>
+   </div><!-- end .content -->
 
-    {%- include footer.html -%}
+   {% include footer.html %}
+   {% include scripts.html %}
 
-  </body>
+</body>
 
 </html>
