change Name.Variable color in css style sheet to make it more visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,7 +411,7 @@ th:last-child{
     color:#989daa
 }
 .highlight .nv,.highlight .vc,.highlight .vg,.highlight .vi{
-    color:#fff
+    color:#2a4470
 }
 html{
     box-sizing:border-box
