remove hard coded headers

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,7 +26,8 @@
   <article class="hentry">
     <header class="header-title">
       <div class="header-title-wrap">
-        <h1 class="entry-title"> Capsicum </h1>
+        <h1 class="entry-title"> {{ site.title }} </h1>
+        <h2>{{ site.description }}</h2>
         {% if site.reading_time %}
         <p class="entry-reading-time">
           <i class="fa fa-clock-o"></i>
