--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -22,8 +22,8 @@
   {% endif %}
   <div class="header-title">
     <div class="header-title-wrap">
-      <h1> Capsicum </h1>
-      <h2> If pain must come, may it come quickly. </h2>
+        <h1>{{ site.title }}</h1>
+        <h2>{{ site.description }}</h2>
     </div><!-- /.header-title-wrap -->
   </div><!-- /.header-title -->
 </div><!-- /.entry-header -->
