add image to post template

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
 {% if page.image.feature %}
 <div class="entry-header">
   <div class="entry-image">
-    <img src="{{ site.url }}/images/{{ page.image.feature }}" alt="{{ page.title }}">
+    <img src="{{ site.url }}/images/pepper_crop.png" alt="{{ page.title }}">
   </div><!-- /.entry-image -->
 </div><!-- /.entry-header -->
 {% endif %}
